--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
                     <button class="close-btn bolder">X</button>
                 </div>
             </section>
+            <!-----CHART-->
             <section class="traffic">
                 <div class="traffic-header">
                     <h1>Traffic</h1>
@@ -200,11 +201,15 @@
                     </ul>
                 </div>
             </section>
-            <section class="daily-traffic">
-                <h1>Daily Traffic</h1>
-            </section>
-            <section class="mobile-users">
-                <h1>Mobile Users</h1>                
+            <!----DATA-->
+            <section class="data-container">
+                <div class="daily-traffic">
+                    <h1>Daily Traffic</h1>
+                </div>
+                <div class="mobile-users">
+                    <h1>Mobile Users</h1>
+                </div>
+
             </section>
 <!---------------------SOCIAL STATS SECTION---------------------->
             <section class="social-stats-section">
@@ -276,17 +281,124 @@ h-4.9v4.9h-2.5V7.4h-4.9V4.9h4.9V0h2.5v4.9H32.8z" />
                 </div>
 
             </section>
-            <section class="new-members">
-                <h1>New Members</h1>
+            <!-------MEMBERS-->
+            <section class="member-container">
+                <div class="new-members">
+                    <h1>New Members</h1>
+                    <ul>
+                        <li>
+                            <img src="images/member-1.jpg" />
+                            <div>
+                                <p>Victoria Chambers</p>
+                                <p>victoriachambers@gmail.com</p>
+                            </div>
+                            <p>12/22/2019</p>
+                        </li>
+                        <li>
+                            <img src="images/member-2.jpg" />
+                            <div>
+                                <p>Victoria Chambers</p>
+                                <p>victoriachambers@gmail.com</p>
+                            </div>
+                            <p>12/22/2019</p>
+                        </li>
+                        <li>
+                            <img src="images/member-3.jpg" />
+                            <div>
+                                <p>Victoria Chambers</p>
+                                <p>victoriachambers@gmail.com</p>
+                            </div>
+                            <p>12/22/2019</p>
+                        </li>
+                        <li>
+                            <img src="images/member-4.jpg" />
+                            <div>
+                                <p>Victoria Chambers</p>
+                                <p>victoriachambers@gmail.com</p>
+                            </div>
+                            <p>12/22/2019</p>
+                        </li>
+
+                    </ul>
+                </div>
+                <div class="recent-activity">
+                    <h1>Recent Activity</h1>
+                    <ul>
+                        <li>
+                            <img src="images/member-1.jpg" />
+                            <div>
+                                <p>Victoria Chambers</p>
+                                <p>victoriachambers@gmail.com</p>
+                            </div>
+                            <p>12/22/2019</p>
+                        </li>
+                        <li>
+                            <img src="images/member-2.jpg" />
+                            <div>
+                                <p>Victoria Chambers</p>
+                                <p>victoriachambers@gmail.com</p>
+                            </div>
+                            <p>12/22/2019</p>
+                        </li>
+                        <li>
+                            <img src="images/member-3.jpg" />
+                            <div>
+                                <p>Victoria Chambers</p>
+                                <p>victoriachambers@gmail.com</p>
+                            </div>
+                            <p>12/22/2019</p>
+                        </li>
+                        <li>
+                            <img src="images/member-4.jpg" />
+                            <div>
+                                <p>Victoria Chambers</p>
+                                <p>victoriachambers@gmail.com</p>
+                            </div>
+                            <p>12/22/2019</p>
+                        </li>
+
+                    </ul>
+                </div>
+
+
             </section>
-            <section class="recent-activity">
-                <h1>Recent Activity</h1>
-            </section>
-            <section class="message-user">
-                <h1>Message User</h1>
-            </section>
-            <section class="settings">
-                <h1>Settings</h1>
+            <!----forms-->
+            <section class="forms-container">
+
+                <div class="message-user">
+                    <h1>Message User</h1>
+                    <div class="message-container">
+                        <ul>
+                            <li>
+                                <input type="text" />
+                            </li>
+                            <li>
+                                <textarea></textarea>
+                            </li>
+                            <li>
+                                <button>Send</button>
+                            </li>
+                        </ul>
+
+                    </div>
+                 </div>
+                <div class="settings">
+                    <h1>Settings</h1>
+                    <div class="settings-container">
+                        <ul>
+                            <li>Send email notifications</li>
+                            <li><button>x</button></li>
+                        </ul>
+                        <ul>
+                            <li>Make profile public</li>
+                            <li><button>x</button></li>
+                        </ul>
+
+
+                    </div>
+                </div>
+
+
             </section>
         </main>
     </div>
