--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ h-4.9v4.9h-2.5V7.4h-4.9V4.9h4.9V0h2.5v4.9H32.8z" />
                                 <p>Victoria Chambers</p>
                                 <p>victoriachambers@gmail.com</p>
                             </div>
-                            <p>12/22/2019</p>
+                            <p>></p>
                         </li>
                         <li>
                             <img src="images/member-2.jpg" />
@@ -338,7 +338,7 @@ h-4.9v4.9h-2.5V7.4h-4.9V4.9h4.9V0h2.5v4.9H32.8z" />
                                 <p>Victoria Chambers</p>
                                 <p>victoriachambers@gmail.com</p>
                             </div>
-                            <p>12/22/2019</p>
+                            <p>></p>
                         </li>
                         <li>
                             <img src="images/member-3.jpg" />
@@ -346,7 +346,7 @@ h-4.9v4.9h-2.5V7.4h-4.9V4.9h4.9V0h2.5v4.9H32.8z" />
                                 <p>Victoria Chambers</p>
                                 <p>victoriachambers@gmail.com</p>
                             </div>
-                            <p>12/22/2019</p>
+                            <p>></p>
                         </li>
                         <li>
                             <img src="images/member-4.jpg" />
@@ -354,7 +354,7 @@ h-4.9v4.9h-2.5V7.4h-4.9V4.9h4.9V0h2.5v4.9H32.8z" />
                                 <p>Victoria Chambers</p>
                                 <p>victoriachambers@gmail.com</p>
                             </div>
-                            <p>12/22/2019</p>
+                            <p>></p>
                         </li>
 
                     </ul>
@@ -382,23 +382,24 @@ h-4.9v4.9h-2.5V7.4h-4.9V4.9h4.9V0h2.5v4.9H32.8z" />
 
                     </div>
                  </div>
+
                 <div class="settings">
-                    <h1>Settings</h1>
-                    <div class="settings-container">
-                        <ul>
-                            <li>Send email notifications</li>
-                            <li><button>x</button></li>
-                        </ul>
-                        <ul>
-                            <li>Make profile public</li>
-                            <li><button>x</button></li>
-                        </ul>
+<h1>Settings</h1>
+<div class="settings-container">
+<p class="option1">Send email notifications</p>
+<a href="#" class="onoff1">x</a>
+<p class="option2">Make profile public</p>
+<a href="#" class="onoff2">x</a>
+<select class="timezone" name="timezone">
+<option value="east">east</option>
+</select>                
+                      
+<a href="#" class="btn1">Send</a>
+<a href="#" class="btn2">Send</a>
+                      
 
-
-                    </div>
+</div>
                 </div>
-
-
             </section>
         </main>
     </div>
