--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ h-4.9v4.9h-2.5V7.4h-4.9V4.9h4.9V0h2.5v4.9H32.8z" />
                             <img src="images/member-1.jpg" />
                             <div>
                                 <p>Victoria Chambers</p>
-                                <p>victoriachambers@gmail.com</p>
+                                <p>4 hours ago</p>
                             </div>
                             <p>></p>
                         </li>
@@ -336,7 +336,7 @@ h-4.9v4.9h-2.5V7.4h-4.9V4.9h4.9V0h2.5v4.9H32.8z" />
                             <img src="images/member-2.jpg" />
                             <div>
                                 <p>Victoria Chambers</p>
-                                <p>victoriachambers@gmail.com</p>
+                                <p>4 hours ago</p>
                             </div>
                             <p>></p>
                         </li>
@@ -344,7 +344,7 @@ h-4.9v4.9h-2.5V7.4h-4.9V4.9h4.9V0h2.5v4.9H32.8z" />
                             <img src="images/member-3.jpg" />
                             <div>
                                 <p>Victoria Chambers</p>
-                                <p>victoriachambers@gmail.com</p>
+                                <p>4 hours ago</p>
                             </div>
                             <p>></p>
                         </li>
@@ -352,7 +352,7 @@ h-4.9v4.9h-2.5V7.4h-4.9V4.9h4.9V0h2.5v4.9H32.8z" />
                             <img src="images/member-4.jpg" />
                             <div>
                                 <p>Victoria Chambers</p>
-                                <p>victoriachambers@gmail.com</p>
+                                <p>4 hours ago</p>
                             </div>
                             <p>></p>
                         </li>
