--- a/index.html
+++ b/index.html
@@ -386,10 +386,40 @@ h-4.9v4.9h-2.5V7.4h-4.9V4.9h4.9V0h2.5v4.9H32.8z" />
                 <div class="settings">
 <h1>Settings</h1>
 <div class="settings-container">
-<p class="option1">Send email notifications</p>
-<a href="#" class="onoff1">x</a>
-<p class="option2">Make profile public</p>
-<a href="#" class="onoff2">x</a>
+    <div class="options">
+        <p class="option1">Send email notifications</p>
+        <div>
+        <button  class="on1">
+           <p style="margin: .4rem;">On</p>  
+           <svg  height="30" width="30" viewBox="0 0 30 30">
+            <circle r="10" cx="16" cy="16" fill="white" />
+           </svg>
+         </button>
+        <button class="off2">
+
+            <svg height="30" width="30" viewBox="0 0 30 30">
+                <circle r="10" cx="16" cy="16" fill="white" />
+            </svg>
+            <p style="margin: .4rem;">Off</p>
+        </button>
+        </div>
+        <p class="option2">Make profile public</p>
+        <div>
+            <button class="on2">
+                <p style="margin: .4rem;">On</p>
+                <svg height="30" width="30" viewBox="0 0 30 30">
+                    <circle r="10" cx="16" cy="16" fill="white" />
+                </svg>
+            </button>
+            <button  class="off2">
+
+                <svg height="30" width="30" viewBox="0 0 30 30">
+                    <circle r="10" cx="16" cy="16" fill="white" />
+                </svg>
+                <p style="margin: .4rem;">Off</p>
+            </button> </div>
+    </div>
+
 <select class="timezone" name="timezone">
 <option value="east">east</option>
 </select>                
